  - Fix problem formatting percent symbols in assertion failures. Thanks to: Nikolaj Schumacher
  - Fix wrong descriptions in the unordered collection matcher. Thanks to: Nikolaj Schumacher
  - Fix underlying cause of crash in Mac version on assertion failure. Thanks to: Nikolaj Schumacher. With this fix, we could switch back to optimized code.
  - Fixed MacExample so it finds OCHamcrest.


== Version 2.0.1 ==
12 May 2013

* Fixes:
  - Fixed crash in Mac version on assertion failure. (Problem with optimized code)
  - Fixed crash in instanceOf and isA when argument was nil.

* Improvements:
  - Updated example projects to Xcode 4.6.


== Version 2.0.0 ==
This release adopts Semantic Versioning (http://semver.org). Since removal of deprecated items is a backwards incompatible change, the major version number is incremented. Thanks to: Jens Nerup

13 Apr 2013
* New matchers:
  - "isA" matches objects that are instances of a given class, but not of any subclass.

* Fixes:
  - Fix GTM compatibility -- avoid shadowing conformsToProtocol:

* Improved matchers:
  - equalToBool has a better description. Thanks to: Jonathan Crooke
  - instanceOf mismatch description now includes actual class.

* Deleted following items deprecated in v1.8:
  - C++ template function boxNumber
  - HC_conformsToProtocol (which was renamed to "HC_conformsTo")

* Project changes:
  - Update project settings to Xcode 4.6. Thanks to: Florian Buerger
  - Removed CocoaPods spec, since it's maintained at CocoaPods.
  - Fixed unit tests so they remain quiet when handling expected test failures.
  - Replaced older code coverage scripts with XcodeCoverage submodule.


== Version 1.9 ==

23 Nov 2012
* Improved matchers:
  - Changed hasCount/hasCountOf mismatch description so that count comes first (if object has a count).

* Project changes:
  - Fixed warnings revealed by latest Xcode. Thanks to: David Hart
  - Changed iOS Architecture support to "Standard" (which includes armv7s)