@@ -18,19 +18,31 @@
 @end
 
 
-OBJC_EXPORT id<HCMatcher> HC_empty(void);
+OBJC_EXPORT __attribute__((deprecated)) id<HCMatcher> HC_empty(void);
+OBJC_EXPORT id<HCMatcher> HC_isEmpty(void);
+
+/**
+    Matches empty collection.
+
+    Deprecated; use isEmpty() instead.
+
+    @ingroup collection_matchers
+ */
+#ifdef HC_SHORTHAND
+    #define empty() HC_empty()
+#endif
 
 /**
     Matches empty collection.
 
     This matcher invokes @c -count on the evaluated object to determine if the number of elements it
     contains is zero.
-    
+
     (In the event of a name clash, don't \#define @c HC_SHORTHAND and use the synonym
-    @c HC_empty instead.)
+    @c HC_isEmpty instead.)
 
     @ingroup collection_matchers
  */
 #ifdef HC_SHORTHAND
-    #define empty() HC_empty()
+    #define isEmpty() HC_isEmpty()
 #endif
