@@ -43,5 +43,10 @@
 
 OBJC_EXPORT id<HCMatcher> HC_empty()
 {
+    return HC_isEmpty();
+}
+
+OBJC_EXPORT id<HCMatcher> HC_isEmpty()
+{
     return [HCIsEmptyCollection isEmptyCollection];
 }
